Set minimum height for html and body to use -webkit-fill-available for better viewport handling

--- a/docs/bundle.css
+++ b/docs/bundle.css
@@ -251,6 +251,7 @@ button.contained .material-loading-spinner > svg > circle {
 html,
 body {
   min-height: 100vh;
+  min-height: -webkit-fill-available;
 }
 body {
   color: var(--paragraph-text-color);
