--- a/docs/bundle.css
+++ b/docs/bundle.css
@@ -1,3 +1,6 @@
+/*!*****************************************************************************************************************!*\
+  !*** css ./node_modules/css-loader/dist/cjs.js??ruleSet[1].rules[1].use[1]!../gaiaprotocol-style/lib/reset.css ***!
+  \*****************************************************************************************************************/
 /***
     The new CSS reset - version 1.11.2 (last updated 15.11.2023)
     GitHub page: https://github.com/elad2412/the-new-css-reset
@@ -107,6 +110,9 @@ meter {
 ::-webkit-details-marker {
     display: none;
 }
+/*!*******************************************************************************************************************************************!*\
+  !*** css ./node_modules/css-loader/dist/cjs.js??ruleSet[1].rules[1].use[1]!./node_modules/less-loader/dist/cjs.js!./docs/style/main.less ***!
+  \*******************************************************************************************************************************************/
 @font-face {
   font-family: Söhne;
   src: url("https://common-resources.gaia.cc/fonts/soehne.woff2") format("woff2");
